--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Overall */
 
-@import url('https://fonts.googleapis.com/css2?family=Jersey+10&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Jersey+10&display=swap');
 
 * {
   margin: 0;
@@ -18,7 +18,6 @@ html {
 }
 
 p {
-  margin: 1.5rem 0;
   color: rgb(85, 85, 85); 
 }
 
@@ -32,9 +31,9 @@ a,
 nav,
 .nav-links {
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between;
   align-items: center;
-  height: 100%;
+  height: 100%; */
 }
 
 nav {
@@ -235,17 +234,17 @@ section {
 }
 
 .btn-color-1,
-.btn-color-1 {
+.btn-color-2 {
   border: rgb(53,53,53) 0.1rem solid;
 }
 
 .btn-color-1:hover,
-.btn-color-1:hover {
+.btn-color-2:hover {
   cursor: pointer;
 }
 
 .btn-color-1,
-.btn-color-1:hover {
+.btn-color-2:hover {
   background: rgb(53,53,53);
   color: white;
 }
@@ -321,4 +320,43 @@ section {
   height: 400px;
   width: 400px;
   margin: auto 0;
+}
+
+/* Experience Section */
+
+#experience {
+  position: relative; 
+}
+
+.experice-sub-title {
+  color: rgb(85, 85, 85);
+  font-weight: 600;
+  font-size: 1.75rem;
+  margin-bottom: 2rem;
+}
+
+.experince-details-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.article-container {
+  display: flex;
+  text-align: initial;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap: 2.5rem;
+  justify-content: space-around;
+}
+
+article{
+  display: flex;
+  width: 10rem;
+  justify-content: space-around;
+  gap: 0.5rem;
+}
+
+article .icon {
+  cursor: default;
 }
