--- a/style.css
+++ b/style.css
@@ -441,3 +441,161 @@ footer {
 footer p {
   text-align: center;
 }
+
+
+/* chatBot */
+
+
+.chatbot-toggler {
+  position: fixed;
+  bottom: 35px;
+  right: 40px;
+  height: 50px;
+  width: 50px;
+  background: #724ae8;
+  color: #fff;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  outline: none;
+  cursor: pointer; 
+  z-index: 1000;
+}
+
+.chatbot-toggler span {
+  position: absolute;
+}
+
+.show-chatbot .chatbot-toggler span:first-child,
+.chatbot-toggler span:last-child {
+  opacity: 0;
+}
+
+.show-chatbot .chatbot-toggler span:last-child {
+  opacity: 1;
+
+}
+
+.chatbot {
+  width: 420px;
+  background: white;
+  position: fixed;
+  bottom: 100px;
+  right: 40px;
+  overflow: hidden;
+  border-radius: 15px;
+  box-shadow: 0 0 128px 0 rgba(0, 0, 0, 1),
+    0 0 64px -48px rgba(0, 0, 0, 1);
+  z-index: 1000;
+  transform: scale(0.5);
+  opacity: 0;
+  pointer-events: none;
+}
+
+.show-chatbot .chatbot {
+  transform: scale(1);
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.chatbot header {
+  background: rgb(189, 118, 236);
+  padding: 16px 0;
+  text-align: center;
+  position: relative;
+}
+
+.chatbot header h2 {
+  color: white;
+  font-size: 1.4rem;
+}
+
+.chatbot header span {
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  color: #fff;
+  cursor: pointer;
+  display: none;
+  transform: translateY(-50%);
+} 
+
+.chatbot .chatbox {
+  height: 510px;
+  overflow-y: auto;
+  padding: 30px 20px 70px;
+}
+
+.chatbox .chat {
+  display: flex;
+}
+
+.chatbox .outgoing {
+  margin: 20px 0;
+  justify-content: flex-end;
+}
+
+.chatbox .incoming span{
+  height: 32px;
+  width: 32px;
+  background: #724ae8;
+  align-self: flex-end;
+  color: #fff;
+  text-align: center;
+  line-height: 32px;
+  border-radius: 4px;
+  margin: 0 10px 7px 0;
+}
+
+
+.chatbox .chat p {
+  color: white;
+  padding: 10px 15px;
+  max-width: 75%;
+  border-radius: 10px 10px 10px 0;
+  background: #724ae8;
+  font-size: 1rem ;
+}
+
+.chatbox .incoming p {
+  color: black;
+  background: #f2f2f2;
+  border-radius: 10px 10px 10px 0 ;
+}
+
+.chatbot .input-text {
+  display: flex;
+  position: absolute;
+  border-top: 1px solid #ccc;
+  bottom: 0;
+  width: 100%;
+  background: #fff;
+  padding: 5px 20px;
+  gap: 5px;
+}
+
+.input-text textarea {
+  height: 55px;
+  width: 82%;
+  border: none;
+  outline: none;
+  font-size: 0.95rem;
+  resize: none;
+  padding: 16px 15px 16px 0;
+}
+
+.input-text span {
+  align-self: flex-end;
+  height: 55px;
+  line-height: 55px;
+  color: #724ae8;
+  font-size: 1.5rem;
+  cursor: pointer;
+  visibility: hidden;
+}
+
+.input-text textarea:valid ~ span {
+  visibility: visible;
+}
