--- a/style.css
+++ b/style.css
@@ -449,10 +449,10 @@ footer p {
 .chatbot-toggler {
   position: fixed;
   bottom: 35px;
-  right: 40px;
+  left: 40px;
   height: 50px;
   width: 50px;
-  background: #724ae8;
+  background: black;
   color: #fff;
   border: none;
   display: flex;
@@ -462,6 +462,11 @@ footer p {
   outline: none;
   cursor: pointer; 
   z-index: 1000;
+  transition: all 0.1s ease;
+}
+
+.show-chatbot .chatbot-toggler {
+  transform: rotate(90deg);
 }
 
 .chatbot-toggler span {
@@ -479,11 +484,12 @@ footer p {
 }
 
 .chatbot {
-  width: 420px;
+  width: 300px;
+  height: 420px;
   background: white;
   position: fixed;
   bottom: 100px;
-  right: 40px;
+  left: 40px;
   overflow: hidden;
   border-radius: 15px;
   box-shadow: 0 0 128px 0 rgba(0, 0, 0, 1),
@@ -492,6 +498,8 @@ footer p {
   transform: scale(0.5);
   opacity: 0;
   pointer-events: none;
+  transform-origin: bottom left;
+  transition: all 0.2s ease;
 }
 
 .show-chatbot .chatbot {
@@ -501,8 +509,8 @@ footer p {
 }
 
 .chatbot header {
-  background: rgb(189, 118, 236);
-  padding: 16px 0;
+  background: gray;
+  padding: 10px 0;
   text-align: center;
   position: relative;
 }
@@ -525,7 +533,7 @@ footer p {
 .chatbot .chatbox {
   height: 510px;
   overflow-y: auto;
-  padding: 30px 20px 70px;
+  padding: 30px 20px 100px;
 }
 
 .chatbox .chat {
@@ -540,7 +548,7 @@ footer p {
 .chatbox .incoming span{
   height: 32px;
   width: 32px;
-  background: #724ae8;
+  background: gray;
   align-self: flex-end;
   color: #fff;
   text-align: center;
@@ -555,8 +563,9 @@ footer p {
   padding: 10px 15px;
   max-width: 75%;
   border-radius: 10px 10px 10px 0;
-  background: #724ae8;
-  font-size: 1rem ;
+  background: gray;
+  font-size: 1rem;
+  white-space: pre-wrap;
 }
 
 .chatbox .incoming p {
@@ -577,20 +586,21 @@ footer p {
 }
 
 .input-text textarea {
-  height: 55px;
-  width: 82%;
+  height: 35px;
+  width: 80%;
   border: none;
   outline: none;
   font-size: 0.95rem;
   resize: none;
   padding: 16px 15px 16px 0;
+  max-height: 180px;
 }
 
 .input-text span {
   align-self: flex-end;
   height: 55px;
   line-height: 55px;
-  color: #724ae8;
+  color: gray;
   font-size: 1.5rem;
   cursor: pointer;
   visibility: hidden;
